--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -28,11 +27,11 @@
 <div class="card-body p-3 p-sm-4">
 
 
-<img src="https://www.img.in.th/images/1dee932a42d9e7eb91370e3a726c8164.jpg" class="img-fluid" style="width: 450px;border-radius: 15px;">
+<img src="https://sv1.picz.in.th/images/2022/09/10/a6MwCJ.jpg" class="img-fluid" style="width: 450px;border-radius: 15px;">
 </a>
-<p class="lead mb-4 mt-3" style="font-family: 'Kanit', sans-serif;font-size: 28px;font-weight: 500;">ฝาก-ถอนขั้นต่ำ 1 บาท</p>
+<p class="lead mb-4 mt-3" style="font-family: 'Kanit', sans-serif;font-size: 28px;font-weight: 500;">เปิดยูสเพียง 50 ถอนได้ทั้งหมด</p>
 <div class="d-grid gap-2 col-10 mx-auto">
-<button class="btn btn-primary btn-lg text-nowrap mb-2" id="btnShare" onclick="sendShare()" style="font-family: 'Kanit', sans-serif;">แชร์ให้เพื่อนเลย!!</button>
+<button class="btn btn-primary btn-lg text-nowrap mb-2" id="btnShare" onclick="sendShare()" style="font-family: 'Kanit', sans-serif;">แชร์ให้เพื่อนเลย!! ห้ามแชร์พนัน</button>
 </div>
 </div>
 </div>
