--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             "action": {
               "type": "uri",
               "label": "แชร์ให้เพื่อนเลย!!",
-              "uri": "https://liff.line.me/"
+              "uri": "https://liff.line.me/1656342075-X2N8A6GQ"
             },
             "color": "#FF4D00",
             "style": "primary"
@@ -248,7 +248,7 @@
     }
     async function main() {
       await liff.init({
-        liffId: "1657427031-3pGMawWg"
+        liffId: "1656342075-X2N8A6GQ"
       })
       if (!liff.isLoggedIn()) {
         liff.login()
