--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
             "type": "button",
             "action": {
               "type": "uri",
-              "label": "สอบถามเพิ่มเติม",
-              "uri": "https://lin.ee/v4aJHOM"
+              "label": "สมัครสมาชิก",
+              "uri": "http://bon555.website/%E0%B8%AA%E0%B8%A1%E0%B8%B1%E0%B8%84%E0%B8%A3%E0%B8%AA%E0%B8%A1%E0%B8%B2%E0%B8%8A%E0%B8%B4%E0%B8%81/"
             },
             "color": "#FF4D00",
             "style": "primary",
