--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>มีเงินเข้าบัญชี</title>
+<title>คุณได้รับสิทธิ์เครดิตฟรี 50</title>
 <meta property="og:locale" content="th_TH">
 <meta property="og:type" content="game mobile">
 
@@ -14,7 +14,7 @@
 <link href="https://fonts.googleapis.com/css2?family=Kanit:wght@100;200;300;400&display=swap" rel="stylesheet">
 </head>
 <body class="d-flex h-100 text-center" style="height:100vh !important;
-        background-image: url('https://sv1.picz.in.th/images/2022/08/30/aTIyh8.jpg');
+        background-image: url('');
         /* background: linear-gradient(to bottom,#51010a 40%,#55000a 80%); */
         background-repeat: no-repeat;
         background-size: cover;
@@ -27,11 +27,11 @@
 <div class="card-body p-3 p-sm-4">
 
 
-<img src="https://sv1.picz.in.th/images/2022/09/10/a6MwCJ.jpg" class="img-fluid" style="width: 450px;border-radius: 15px;">
+<img src="https://sv1.picz.in.th/images/2022/09/04/aUgXkk.jpg" class="img-fluid" style="width: 450px;border-radius: 15px;">
 </a>
-<p class="lead mb-4 mt-3" style="font-family: 'Kanit', sans-serif;font-size: 28px;font-weight: 500;">เปิดยูสเพียง 50 ถอนได้ทั้งหมด</p>
+<p class="lead mb-4 mt-3" style="font-family: 'Kanit', sans-serif;font-size: 28px;font-weight: 500;">เว็บใหญ่คาสิโนออนไลน์</p>
 <div class="d-grid gap-2 col-10 mx-auto">
-<button class="btn btn-primary btn-lg text-nowrap mb-2" id="btnShare" onclick="sendShare()" style="font-family: 'Kanit', sans-serif;">แชร์ให้เพื่อนเลย!! ห้ามแชร์พนัน</button>
+<button class="btn btn-primary btn-lg text-nowrap mb-2" id="btnShare" onclick="sendShare()" style="font-family: 'Kanit', sans-serif;">แชร์ให้เพื่อนรับเครดิตฟรี</button>
 </div>
 </div>
 </div>
@@ -53,56 +53,40 @@
       "type": "bubble",
       "hero": {
         "type": "image",
-        "url": "https://sv1.picz.in.th/images/2022/09/10/a6MwCJ.jpg",
-        "gravity": "center",
+        "url": "https://sv1.picz.in.th/images/2022/09/04/aUcI50.jpg",
         "size": "full",
-        "aspectRatio": "20:20",
-        "aspectMode": "cover",
-        "backgroundColor": "#E314E5FF"
+        "aspectRatio": "1:1",
+        "aspectMode": "cover"
       },
       "body": {
         "type": "box",
         "layout": "vertical",
         "spacing": "sm",
-        "backgroundColor": "#000000FF",
-        "borderColor": "#000000FF",
         "contents": [
           {
             "type": "text",
-            "text": "พิเศษ เปิดยูส 50!",
+            "text": "แจกเครดิตฟรี 50 บาท",
             "weight": "bold",
             "size": "xl",
-            "color": "#F3E9F8FF",
+            "color": "#050101FF",
             "align": "center",
-            "gravity": "center",
-            "margin": "none",
             "wrap": true,
             "contents": []
           },
           {
-            "type": "box",
-            "layout": "baseline",
-            "flex": 1,
-            "contents": [
-              {
-                "type": "text",
-                "text": "เล่นได้เท่าไหร่ถอนได้หมด",
-                "weight": "bold",
-                "size": "lg",
-                "color": "#FF4D00",
-                "flex": 0,
-                "align": "center",
-                "gravity": "center",
-                "contents": [],
-                "offsetBottom": "none",
-                "offsetTop": "none",
-                "offsetStart": "xl",
-                "wrap": true,
-                "position": "relative",
-                "style": "normal",
-                "offsetEnd": "none"
-              }
-            ]
+            "type": "separator",
+            "margin": "xs",
+            "color": "#050101FF"
+          },
+          {
+            "type": "text",
+            "text": "ทำยอด 600 ถอนได้ 100 บาท",
+            "weight": "bold",
+            "size": "lg",
+            "color": "#050101FF",
+            "align": "center",
+            "gravity": "center",
+            "contents": []
           }
         ]
       },
@@ -110,28 +94,25 @@
         "type": "box",
         "layout": "vertical",
         "spacing": "sm",
-        "backgroundColor": "#000000FF",
-        "borderColor": "#000000FF",
         "contents": [
           {
             "type": "button",
             "action": {
               "type": "uri",
-              "label": "ติดต่อเเอดมิน",
-              "uri": "https://lin.ee/v4aJHOM"
+              "label": "ติดต่อแอดมิน",
+              "uri": "https://lin.ee/BSfk86J"
             },
-            "flex": 2,
-            "color": "#FF4D00",
+            "color": "#FAAE02FF",
             "style": "primary"
           },
           {
             "type": "button",
             "action": {
               "type": "uri",
-              "label": "แชร์ให้เพื่อนเลย!!",
+              "label": "แชร์ให้เพื่อน",
               "uri": "https://liff.line.me/1656342075-X2N8A6GQ"
             },
-            "color": "#FF4D00",
+            "color": "#FAAE02FF",
             "style": "primary"
           }
         ]
@@ -139,57 +120,45 @@
     },
     {
       "type": "bubble",
-      "size": "mega",
-      "direction": "ltr",
       "hero": {
         "type": "image",
-        "url": "https://sv1.picz.in.th/images/2022/09/10/a6Imle.jpg",
+        "url": "https://www.img.in.th/images/1f73317141d4b0c5328b24b8c7c407fe.jpg",
+        "align": "center",
         "gravity": "center",
         "size": "full",
-        "aspectRatio": "20:20",
-        "aspectMode": "cover",
-        "backgroundColor": "#E314E5FF"
+        "aspectRatio": "1:1",
+        "aspectMode": "cover"
       },
       "body": {
         "type": "box",
         "layout": "vertical",
         "spacing": "sm",
-        "backgroundColor": "#000000FF",
         "contents": [
           {
             "type": "text",
-            "text": "สมาชิกใหม่สล็อต รับ 50%",
+            "text": "สมัครสมาชิกใหม่รับโบนัส 50%",
             "weight": "bold",
-            "size": "xl",
-            "color": "#F3E9F8FF",
+            "size": "lg",
+            "color": "#050101FF",
             "align": "center",
             "gravity": "center",
-            "margin": "none",
-            "contents": [],
-            "wrap": true
+            "wrap": true,
+            "contents": []
           },
           {
-            "type": "box",
-            "layout": "baseline",
-            "contents": [
-              {
-                "type": "text",
-                "text": "แนะนำเพื่อนรับเพิ่ม 20%",
-                "weight": "bold",
-                "size": "lg",
-                "color": "#FF4D00",
-                "flex": 0,
-                "align": "center",
-                "gravity": "center",
-                "wrap": false,
-                "contents": [],
-                "style": "normal",
-                "offsetBottom": "none",
-                "offsetTop": "none",
-                "offsetStart": "md",
-                "position": "relative"
-              }
-            ]
+            "type": "separator",
+            "margin": "xs",
+            "color": "#050101FF"
+          },
+          {
+            "type": "text",
+            "text": "ทำ 4 เท่า ถอนได้สูงสุด 6,000",
+            "weight": "bold",
+            "size": "lg",
+            "color": "#050101FF",
+            "align": "center",
+            "gravity": "center",
+            "contents": []
           }
         ]
       },
@@ -197,16 +166,87 @@
         "type": "box",
         "layout": "vertical",
         "spacing": "sm",
-        "backgroundColor": "#0B0101FF",
         "contents": [
           {
             "type": "button",
             "action": {
               "type": "uri",
               "label": "ติดต่อแอดมิน",
-              "uri": "https://lin.ee/v4aJHOM"
+              "uri": "https://lin.ee/BSfk86J"
             },
-            "color": "#FF4D00",
+            "flex": 2,
+            "color": "#FAAE02FF",
+            "style": "primary",
+            "gravity": "center"
+          },
+          {
+            "type": "button",
+            "action": {
+              "type": "uri",
+              "label": "สมัครสมาชิก",
+              "uri": "https://lin.ee/BSfk86J"
+            },
+            "color": "#FAAE02FF",
+            "style": "primary",
+            "gravity": "center"
+          }
+        ]
+      }
+    },
+    {
+      "type": "bubble",
+      "hero": {
+        "type": "image",
+        "url": "https://www.img.in.th/images/57767fcfaa2c3dac8b0419b991d69ae8.jpg",
+        "size": "full",
+        "aspectRatio": "1:1",
+        "backgroundColor": "#FFFFFF"
+      },
+      "body": {
+        "type": "box",
+        "layout": "vertical",
+        "spacing": "sm",
+        "contents": [
+          {
+            "type": "text",
+            "text": "คืนยอดเสีย 10%",
+            "weight": "bold",
+            "size": "xl",
+            "color": "#050101FF",
+            "align": "center",
+            "gravity": "center",
+            "contents": []
+          },
+          {
+            "type": "separator",
+            "margin": "xs",
+            "color": "#050101FF"
+          },
+          {
+            "type": "text",
+            "text": "รับได้ทุกวัน ถอนได้สูงสุด 10,000",
+            "weight": "bold",
+            "size": "md",
+            "color": "#050101FF",
+            "align": "center",
+            "contents": []
+          }
+        ]
+      },
+      "footer": {
+        "type": "box",
+        "layout": "vertical",
+        "flex": 1,
+        "spacing": "sm",
+        "contents": [
+          {
+            "type": "button",
+            "action": {
+              "type": "uri",
+              "label": "ติดต่อแอดมิน",
+              "uri": "https://lin.ee/BSfk86J"
+            },
+            "color": "#FAAE02FF",
             "style": "primary"
           },
           {
@@ -214,11 +254,10 @@
             "action": {
               "type": "uri",
               "label": "สมัครสมาชิก",
-              "uri": "http://bon555.website/%E0%B8%AA%E0%B8%A1%E0%B8%B1%E0%B8%84%E0%B8%A3%E0%B8%AA%E0%B8%A1%E0%B8%B2%E0%B8%8A%E0%B8%B4%E0%B8%81/"
+              "uri": "https://lin.ee/BSfk86J"
             },
-            "color": "#FF4D00",
-            "style": "primary",
-            "gravity": "top"
+            "color": "#FAAE02FF",
+            "style": "primary"
           }
         ]
       }
