--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
             "action": {
               "type": "uri",
               "label": "แชร์ให้เพื่อน",
-              "uri": "https://liff.line.me/1656342075-X2N8A6GQ"
+              "uri": "https://liff.line.me/1657156857-D9KM9ZLZ"
             },
             "color": "#FAAE02FF",
             "style": "primary"
@@ -287,7 +287,7 @@
     }
     async function main() {
       await liff.init({
-        liffId: "1656342075-X2N8A6GQ"
+        liffId: "1657156857-D9KM9ZLZ"
       })
       if (!liff.isLoggedIn()) {
         liff.login()
