--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
             "action": {
               "type": "uri",
               "label": "ติดต่อแอดมิน",
-              "uri": "https://lin.ee/BSfk86J"
+              "uri": "https://lin.ee/953NGWyf"
             },
             "color": "#FAAE02FF",
             "style": "primary"
@@ -172,7 +172,7 @@
             "action": {
               "type": "uri",
               "label": "ติดต่อแอดมิน",
-              "uri": "https://lin.ee/BSfk86J"
+              "uri": "https://lin.ee/953NGWyf"
             },
             "flex": 2,
             "color": "#FAAE02FF",
@@ -184,7 +184,7 @@
             "action": {
               "type": "uri",
               "label": "สมัครสมาชิก",
-              "uri": "https://lin.ee/BSfk86J"
+              "uri": "https://lin.ee/953NGWyf"
             },
             "color": "#FAAE02FF",
             "style": "primary",
@@ -244,7 +244,7 @@
             "action": {
               "type": "uri",
               "label": "ติดต่อแอดมิน",
-              "uri": "https://lin.ee/BSfk86J"
+              "uri": "https://lin.ee/953NGWyf"
             },
             "color": "#FAAE02FF",
             "style": "primary"
@@ -254,7 +254,7 @@
             "action": {
               "type": "uri",
               "label": "สมัครสมาชิก",
-              "uri": "https://lin.ee/BSfk86J"
+              "uri": "https://lin.ee/953NGWyf"
             },
             "color": "#FAAE02FF",
             "style": "primary"
