--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <img src="https://sv1.picz.in.th/images/2022/09/15/ae1eLz.jpg" class="img-fluid" style="width: 450px;border-radius: 15px;">
 </a>
-<p class="lead mb-4 mt-3" style="font-family: 'Kanit', sans-serif;font-size: 28px;font-weight: 500;">แชร์แล้วแคปรูปมา 10 คน</p><pclass="lead mb-4 mt-3" style="font-family: 'Kanit', sans-serif;font-size: 28px;font-weight: 500;">*ห้ามแชร์ไลน์พนัน</p>
+<p class="lead mb-4 mt-3" style="font-family: 'Kanit', sans-serif;font-size: 28px;font-weight: 500;">แชร์แล้วแคปรูปมา 10 คน</p><pclass="lead mb-4 mt-3" style="font-family: 'Kanit', sans-serif;font-size: 28px;font-weight: 500;">* ห้ามแชร์ไลน์พนัน *</p>
 <div class="d-grid gap-2 col-10 mx-auto">
 <button class="btn btn-primary btn-lg text-nowrap mb-2" id="btnShare" onclick="sendShare()" style="font-family: 'Kanit', sans-serif;">แชร์!! เพื่อนรับเครดิตฟรี</button>
 </div>
