--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <div class="card-body p-3 p-sm-4">
 
 
-<img src="https://sv1.picz.in.th/images/2022/09/15/ae1eLz.jpg" class="img-fluid" style="width: 450px;border-radius: 15px;">
+<img src="https://sv1.picz.in.th/images/2022/10/24/vk9a8I.jpg" class="img-fluid" style="width: 450px;border-radius: 15px;">
 </a>
 <p class="lead mb-4 mt-3" style="font-family: 'Kanit', sans-serif;font-size: 28px;font-weight: 500;">แชร์แล้วแคปรูปมา 10 คน</p><pclass="lead mb-4 mt-3" style="font-family: 'Kanit', sans-serif;font-size: 28px;font-weight: 500; color: #ffff00;"><sup><b>* ห้ามแชร์ไลน์พนัน *</b></sup></p>
 <div class="d-grid gap-2 col-10 mx-auto">
@@ -53,7 +53,7 @@
       "type": "bubble",
       "hero": {
         "type": "image",
-        "url": "https://sv1.picz.in.th/images/2022/09/15/aeKEWb.jpg",
+        "url": "https://sv1.picz.in.th/images/2022/10/24/vk9a8I.jpg",
         "size": "full",
         "aspectRatio": "1:1",
         "aspectMode": "cover"
@@ -65,7 +65,7 @@
         "contents": [
           {
             "type": "text",
-            "text": "แจกเครดิตฟรี 50 บาท",
+            "text": "แจกเครดิตฟรี 300 บาท",
             "weight": "bold",
             "size": "xl",
             "color": "#050101FF",
@@ -80,9 +80,8 @@
           },
           {
             "type": "text",
-            "text": "ทำยอด 600 ถอนได้ 100 บาท",
-            "weight": "bold",
-            "size": "lg",
+            "text": "แชร์ต่อให้เพื่อน 10 ขอคนที่ไวที่สุด",
+            "size": "md",
             "color": "#050101FF",
             "align": "center",
             "gravity": "center",
@@ -100,7 +99,7 @@
             "action": {
               "type": "uri",
               "label": "ติดต่อแอดมิน",
-              "uri": "https://lin.ee/953NGWyf"
+              "uri": "https://lin.ee/HQ8ss4r"
             },
             "color": "#FAAE02FF",
             "style": "primary"
@@ -111,150 +110,6 @@
               "type": "uri",
               "label": "แชร์ให้เพื่อน",
               "uri": "https://liff.line.me/1657156857-D9KM9ZLZ"
-            },
-            "color": "#FAAE02FF",
-            "style": "primary"
-          }
-        ]
-      }
-    },
-    {
-      "type": "bubble",
-      "hero": {
-        "type": "image",
-        "url": "https://sv1.picz.in.th/images/2022/09/15/aeKv4E.jpg",
-        "align": "center",
-        "gravity": "center",
-        "size": "full",
-        "aspectRatio": "1:1",
-        "aspectMode": "cover"
-      },
-      "body": {
-        "type": "box",
-        "layout": "vertical",
-        "spacing": "sm",
-        "contents": [
-          {
-            "type": "text",
-            "text": "สมัครสมาชิกใหม่รับโบนัส 50%",
-            "weight": "bold",
-            "size": "lg",
-            "color": "#050101FF",
-            "align": "center",
-            "gravity": "center",
-            "wrap": true,
-            "contents": []
-          },
-          {
-            "type": "separator",
-            "margin": "xs",
-            "color": "#050101FF"
-          },
-          {
-            "type": "text",
-            "text": "ทำ 4 เท่า ถอนได้สูงสุด 6,000",
-            "weight": "bold",
-            "size": "lg",
-            "color": "#050101FF",
-            "align": "center",
-            "gravity": "center",
-            "contents": []
-          }
-        ]
-      },
-      "footer": {
-        "type": "box",
-        "layout": "vertical",
-        "spacing": "sm",
-        "contents": [
-          {
-            "type": "button",
-            "action": {
-              "type": "uri",
-              "label": "ติดต่อแอดมิน",
-              "uri": "https://lin.ee/953NGWyf"
-            },
-            "flex": 2,
-            "color": "#FAAE02FF",
-            "style": "primary",
-            "gravity": "center"
-          },
-          {
-            "type": "button",
-            "action": {
-              "type": "uri",
-              "label": "สมัครสมาชิก",
-              "uri": "https://lin.ee/953NGWyf"
-            },
-            "color": "#FAAE02FF",
-            "style": "primary",
-            "gravity": "center"
-          }
-        ]
-      }
-    },
-    {
-      "type": "bubble",
-      "hero": {
-        "type": "image",
-        "url": "https://sv1.picz.in.th/images/2022/09/15/aeZO8N.jpg",
-        "size": "full",
-        "aspectRatio": "1:1",
-        "backgroundColor": "#FFFFFF"
-      },
-      "body": {
-        "type": "box",
-        "layout": "vertical",
-        "spacing": "sm",
-        "contents": [
-          {
-            "type": "text",
-            "text": "คืนยอดเสีย 10%",
-            "weight": "bold",
-            "size": "xl",
-            "color": "#050101FF",
-            "align": "center",
-            "gravity": "center",
-            "contents": []
-          },
-          {
-            "type": "separator",
-            "margin": "xs",
-            "color": "#050101FF"
-          },
-          {
-            "type": "text",
-            "text": "รับได้ทุกวัน ถอนได้สูงสุด 10,000",
-            "weight": "bold",
-            "size": "md",
-            "color": "#050101FF",
-            "align": "center",
-            "contents": []
-          }
-        ]
-      },
-      "footer": {
-        "type": "box",
-        "layout": "vertical",
-        "flex": 1,
-        "spacing": "sm",
-        "contents": [
-          {
-            "type": "button",
-            "action": {
-              "type": "uri",
-              "label": "ติดต่อแอดมิน",
-              "uri": "https://lin.ee/953NGWyf"
-            },
-            "color": "#FAAE02FF",
-            "style": "primary"
-          },
-          {
-            "type": "button",
-            "action": {
-              "type": "uri",
-              "label": "สมัครสมาชิก",
-              "uri": "https://lin.ee/953NGWyf"
             },
             "color": "#FAAE02FF",
             "style": "primary"
