--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <div class="card-body p-3 p-sm-4">
 
 
-<img src="https://sv1.picz.in.th/images/2022/10/24/vk9a8I.jpg" class="img-fluid" style="width: 450px;border-radius: 15px;">
+<img src="https://www.picz.in.th/image/fc-78craeam4twr.vktJ9k" class="img-fluid" style="width: 450px;border-radius: 15px;">
 </a>
 <p class="lead mb-4 mt-3" style="font-family: 'Kanit', sans-serif;font-size: 28px;font-weight: 500;">แชร์แล้วแคปรูปมา 10 คน</p><pclass="lead mb-4 mt-3" style="font-family: 'Kanit', sans-serif;font-size: 28px;font-weight: 500; color: #ffff00;"><sup><b>* ห้ามแชร์ไลน์พนัน *</b></sup></p>
 <div class="d-grid gap-2 col-10 mx-auto">
@@ -53,7 +53,7 @@
       "type": "bubble",
       "hero": {
         "type": "image",
-        "url": "https://sv1.picz.in.th/images/2022/10/24/vk9a8I.jpg",
+        "url": "https://www.picz.in.th/image/fc-78craeam4twr.vktJ9k",
         "size": "full",
         "aspectRatio": "1:1",
         "aspectMode": "cover"
